# dpc-retriever

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.py311.txt
.github/workflows/: docker-build.yml
lambda/: lambda_function.py
src/dpc_retriever/: __init__.py  dpc_retriever_process.py  main.py  module_args.py  module_retriever.py
src/dpc_retriever/cli/: module_log.py
src/dpc_retriever/dpc/: DPCProduct.py  products.py
src/dpc_retriever/scripts/: __init__.py  concat_shapefile.py  crontab_generation.py
src/dpc_retriever/utils/: filesystem.py  module_s3.py
tests/: test_last_products.py  test_xyz.py
