[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpc-retriever"
version = "1.0.2"
description = "Scripts to get data from DPC API"
readme = ""
authors = [
  { name="Valerio Luzzi", email="valerio.luzzi@gecosistema.com" },
  { name="Tommaso Redaelli", email="tommaso.redaelli@gecosistema.com" }
]
license = { text = "MIT" }
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "requests",
  "click",
  "boto3"
]

[project.optional-dependencies]
py311 = [
    "gdal @ https://download.lfd.uci.edu/pythonlibs/archived/GDAL-3.4.3-cp311-cp311-win_amd64.whl",
    "numpy==1.24.4",
    "numba==0.57.1"
]
py312 = [
    "gdal @ https://github.com/cgohlke/geospatial-wheels/releases/download/v2024.9.22/GDAL-3.9.2-cp312-cp312-win_amd64.whl",
    "numpy==1.26.4",
    "numba==0.61.0"
]
py313 = [
    "gdal @ https://github.com/cgohlke/geospatial-wheels/releases/download/v2025.3.30/gdal-3.10.2-cp313-cp313-win_amd64.whl",
    "numpy==2.2.6",
    "numba==0.61.2"
]

[project.urls]
Homepage = "https://github.com/SaferPlaces2023/dpc-retriever"

[project.scripts]
dpc-retriever = "dpc_retriever.main:main_click"
dpc_retriever = "dpc_retriever.main:main_click"

[tool.setuptools]
packages = ["dpc_retriever"]
package-dir = {"" = "src"}
