[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpc-retriever"
version = "1.0.10"
description = "Scripts to get data from DPC API"
readme = ""
authors = [
  { name="Valerio Luzzi", email="valerio.luzzi@gecosistema.com" },
  { name="Tommaso Redaelli", email="tommaso.redaelli@gecosistema.com" }
]
license = { text = "MIT" }
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "requests",
  "filelock",
  "click",
  "boto3",
  "xarray",
  "rioxarray",
  "netcdf4",
  "geopandas"
]

dynamic = ["optional-dependencies"]

[tool.setuptools.dynamic]
optional-dependencies = {
  gdal_py311 = { file = ["requirements.py311.txt"] },
  pygeoapi   = { file = ["requirements.pygeoapi.txt"] },
  all_py311  = { file = ["requirements.py311.txt", "requirements.pygeoapi.txt"] }
}

[project.urls]
Homepage = "https://github.com/SaferPlaces2023/dpc-retriever"

[project.scripts]
dpc-retriever = "dpc_retriever.main:main_click"
dpc-crontab = "dpc_retriever.scripts.crontab_generation:generate_crontab"
dpc-shp-concat = "dpc_retriever.scripts.concat_shapefile:concat_shapefile"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
